--- a/public/index.html
+++ b/public/index.html
@@ -47,26 +47,42 @@
       //});
       //
 
-
       function onClick() {
-        seats += 1;
+        seats += 1 ;
         document.getElementById("seats").innerHTML = seats;
-      };
+      }; 
 
       const button = document.getElementById('submit');
 
       button.addEventListener('click', async event => {
-        const data = { seats };
+/*         const data = { seats };
         const options = {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify(data)
-        };
-        const response = await fetch('/api', options);
-        const json = await response.json();
-        console.log(json);
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(data)
+      };
+      const response = await fetch('/api', options);
+      const json = await response.json();
+      console.log(json); */
+      await submitSeats()
       });
 
+      async function submitSeats() {        
+        const data = { seats };
+        const options = {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(data)
+      };
+      const response = await fetch('/api', options);
+      const json = await response.json();}
+
+      window.onload = function() {submitSeats();  }  
+
+
+      
+
+      
   </script>
   </body>
 </html>
