add landing page

--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,55 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<title>Within Reach</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
 
-<title>Within Reach Login Form Validation</title>
-<!-- Include CSS File Here -->
-<link rel="stylesheet" href="style.css"/>
+body {
+  font-family: "RaleWay", sans-serif;
+  background-image: url('seating.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size:contain;
+  background-position: center;
+  background-color: black;
+  
+}
+
+h1 {font-size: 50px;}
 
 
-<!-- Include JS File Here -->
-<script src="login.js"></script>
-</head>
-<body>
+</style>
+<body >
 
-    <div class="titleBlock" role="banner">
-        <h1 style="text-align: left;">Within Reach Admin Panel</h1>
-        <h3 style="text-align: left;"><i>Till the End of time!</i></h3>
-   	</div>
 
-<div class="main">
-<h2>Within Reach Login Form Validation</h2>
-<form id="form_id" method="post" name="myform">
-<label>User Name :</label>
-<input type="text" name="username" id="username"/>
-<label>Password :</label>
-<input type="password" name="password" id="password"/>
-<input type="button" value="Login" id="submit" onclick="validate()"/>
-</form>
-<span><b class="note">Note : </b>Kindly contact Shakeel or Amir for Username and Password<br/><b class="valid">EvolveU Learners Inc.<br/>Forget us Not!</b></span>
+<!-- !PAGE CONTENT! -->
+
+
+<!-- Header -->
+<div class="w3-opacity">
+<header >
+  <div class="w3-display-middle w3-text-white w3-center">
+    <h1>Shakeel & Amir's</h1>
+    <h2><i>Within Reach</i></h2>
+    <h3>Grab your Spot!</h3>
+  
+
+<p ><button class="w3-button w3-black" onclick="location.href='user.html'">Check Seat Availability!</button></p>
+<p ><button class="w3-button w3-black" onclick="location.href='login.html'">Go to Admin Panel</button></p>
+
+
+  
+  
+</header>
+
 </div>
-</div>
+
+
+
 </body>
 </html>
