--- a/public/login.html
+++ b/public/login.html
@@ -20,15 +20,15 @@
    	</div>
 
 <div class="main">
-<h2>Within Reach Login Form Validation</h2>
-<form id="form_id" method="post" name="myform">
-<label>User Name :</label>
-<input type="text" name="username" id="username"/>
-<label>Password :</label>
-<input type="password" name="password" id="password"/>
-<input type="button" value="Login" id="submit" onclick="validate()"/>
-</form>
-<span><b class="note">Note : </b>Kindly contact Shakeel or Amir for Username and Password<br/><b class="valid">EvolveU Learners Inc.<br/>Forget us Not!</b></span>
+    <h2>Admin Login</h2>
+    <form id="form_id" method="post" name="myform">
+        <label>User Name :</label>
+        <input type="text" name="username" id="username"/>
+        <label>Password :</label>
+        <input type="password" name="password" id="password"/>
+        <input type="button" value="Login" id="submit" onclick="validate()"/>
+    </form>
+    <span><b class="note">Note : </b>Kindly contact Shakeel or Amir for Username and Password<br/><b class="valid">EvolveU Learners Inc.<br/>Forget us Not!</b></span>
 </div>
 </div>
 </body>
